--- a/test/DemoRunner.html
+++ b/test/DemoRunner.html
@@ -4,43 +4,49 @@
 <head>
   <title>Jasmine Spec Runner</title>
 
-  <link rel="shortcut icon" type="image/png" href="lib/jasmine-1.2.0/jasmine_favicon.png">
-  <link rel="stylesheet" type="text/css" href="lib/jasmine-1.2.0/jasmine.css">
-  <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine.js"></script>
-  <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine-html.js"></script>
+<link rel="shortcut icon" type="image/png" href="lib/jasmine-1.2.0/jasmine_favicon.png">
+<link rel="stylesheet" type="text/css" href="lib/jasmine-1.2.0/jasmine.css">
+<script type="text/javascript" src="lib/jasmine-1.2.0/jasmine.js"></script>
+<script type="text/javascript" src="lib/jasmine-1.2.0/jasmine-html.js"></script>
 
-  <!-- include source files here... -->
+<!-- include source files here... -->
+<script src="../javascript/support/jquery-latest.js"></script>
+<script src="../javascript/support/jquery.color.js"></script>
+<script src="../javascript/tools.js"></script>
+<script src="../javascript/interface.js"></script>
+<script src="../javascript/command.js"></script>
 
-  <!-- include spec files here... -->
+<!-- include spec files here... -->
+<script src="spec/demo.js"></script>
 
-  <script type="text/javascript">
-    (function() {
-      var jasmineEnv = jasmine.getEnv();
-      jasmineEnv.updateInterval = 1000;
+<script type="text/javascript">
+(function() {
+  var jasmineEnv = jasmine.getEnv();
+  jasmineEnv.updateInterval = 1000;
 
-      var htmlReporter = new jasmine.HtmlReporter();
+  var htmlReporter = new jasmine.HtmlReporter();
 
-      jasmineEnv.addReporter(htmlReporter);
+  jasmineEnv.addReporter(htmlReporter);
 
-      jasmineEnv.specFilter = function(spec) {
-        return htmlReporter.specFilter(spec);
-      };
+  jasmineEnv.specFilter = function(spec) {
+    return htmlReporter.specFilter(spec);
+  };
 
-      var currentWindowOnload = window.onload;
+  var currentWindowOnload = window.onload;
 
-      window.onload = function() {
-        if (currentWindowOnload) {
-          currentWindowOnload();
-        }
-        execJasmine();
-      };
+  window.onload = function() {
+    if (currentWindowOnload) {
+      currentWindowOnload();
+    }
+    execJasmine();
+  };
 
-      function execJasmine() {
-        jasmineEnv.execute();
-      }
+  function execJasmine() {
+    jasmineEnv.execute();
+  }
 
-    })();
-  </script>
+})();
+</script>
 
 </head>
 
