Spec tools added

--- a/test/ToolsRunner.html
+++ b/test/ToolsRunner.html
@@ -17,7 +17,7 @@
 <script src="../javascript/command.js"></script>
 
 <!-- include spec files here... -->
-<script src="spec/demo.js"></script>
+<script src="spec/interface/spec_tools.js"></script>
 
 <script type="text/javascript">
 (function() {
