--- a/test/DemoRunnerWithInterface.html
+++ b/test/DemoRunnerWithInterface.html
@@ -1,52 +1,13 @@
-<?php
-/*!
- * MseInterface main page of book edition
- * Encre Nomade
- *
- * Author: LING Huabin - lphuabin@gmail.com
- * Copyright, Encre Nomade
- *
- * Date de creation: Octobre 2011
- */
-
-header("content-type:text/html; charset=utf8");
-include '../project.php';
-include_once '../dbconn.php';
-
-session_start();
-
-$_SESSION['uid'] = 'unittest';
-ConnectDB();
-$pj = MseProject::getExistProject('unittest', 'unittest');
-$_SESSION["unittest_unittest"] = $pj;
-
-?>
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <title>Project Spec Runner</title>
+  <title>Interface Spec Runner</title>
 
 <link rel="shortcut icon" type="image/png" href="lib/jasmine-1.2.0/jasmine_favicon.png">
 <link rel="stylesheet" type="text/css" href="lib/jasmine-1.2.0/jasmine.css">
 <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine.js"></script>
 <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine-html.js"></script>
-
-<STYLE type="text/css">
-    .jasmine_reporter {
-        background: #fff;
-        -webkit-box-shadow: 0px 0px 5px #4d4d4d;
-        -moz-box-shadow: 0px 0px 5px #4d4d4d;
-        box-shadow: 0px 0px 5px #4d4d4d;
-        z-index: 500;
-        position: absolute;
-        width: 100%;
-        height: auto;
-        left: 0px;
-        top: 0px;
-    }
-</STYLE>
 
 <!-- include source files here... -->
 <script src="../javascript/support/jquery-latest.js"></script>
@@ -59,7 +20,7 @@ $_SESSION["unittest_unittest"] = $pj;
 <link rel="stylesheet" type="text/css" href="../stylesheets/interface.css" />
 
 <!-- include spec files here... -->
-<script src="spec/interface/spec_project.js"></script>
+<script src="spec/demo.js"></script>
 
 <script type="text/javascript">
 (function() {
@@ -88,6 +49,29 @@ $_SESSION["unittest_unittest"] = $pj;
     }
 })();
 </script>
+
+<STYLE type="text/css">
+    body {
+        position:absolute;
+        margin:0px;
+        padding:0px;
+        width:100%;
+        height: auto;
+        overflow: auto;
+    }
+    .jasmine_reporter {
+        background: #fff;
+        -webkit-box-shadow: 0px 0px 5px #4d4d4d;
+        -moz-box-shadow: 0px 0px 5px #4d4d4d;
+        box-shadow: 0px 0px 5px #4d4d4d;
+        z-index: 500;
+        position: absolute;
+        width: 100%;
+        height: auto;
+        left: 0px;
+        top: 0px;
+    }
+</STYLE>
 
 </head>
 <body>
@@ -241,26 +225,19 @@ $_SESSION["unittest_unittest"] = $pj;
 	$('#srcAdd').click(addFileDialog);
 	$('#saveProjet').click(saveProject);
 	
-	<?php
-	    print("var pjName = '".$pj->getName()."';\n");
-        print("var pjLanguage = '".$pj->getLanguage()."';\n");
-	    print("var imgPath = '".$pj->getSrcSavePath("image")."';\n");
-	    print("var audPath = '".$pj->getRelatSrcPath("audio")."';\n");
-	    print("var gamePath = '".$pj->getRelatSrcPath("game")."';\n");
-	    print("var lastModServer = ".$pj->getLastModTS().";\n");
-	    print("Config.init({width:".$pj->getWidth().", height:".$pj->getHeight()."});\n");
-
-        if(isset($_SESSION["uid"]) && $_SESSION["uid"] != "") {
-            echo "uid = '".$_SESSION["uid"]."';\n";
-        }
-    ?>
-    if(uid && uid != "") {
-        $(".menu li.id").text(uid);
-    }
+	var pjName = 'unittest';
+	var pjLanguage = 'unittest';
+	var imgPath = './projects/Voodoo_Ch1/images/';
+	var audPath = './Voodoo_Ch1/audios/';
+	var gamePath = './Voodoo_Ch1/games/';
+	var uid = 'unittest';
+	$(".menu li.id").text(uid);
+	Config.init({width:800, height:600});
 	
 	var config = Config.getInstance();
 	init();
-
+	
+	CommandMgr.executeCmd(new AddPageCmd('testpage'));
 </script>
 
 </body>
