--- a/test/ProjectRunner.html
+++ b/test/ProjectRunner.html
@@ -1,32 +1,10 @@
-<?php
-/*!
- * MseInterface main page of book edition
- * Encre Nomade
- *
- * Author: LING Huabin - lphuabin@gmail.com
- * Copyright, Encre Nomade
- *
- * Date de creation: Octobre 2011
- */
-
-header("content-type:text/html; charset=utf8");
-include '../project.php';
-include_once '../dbconn.php';
-
-session_start();
-
-$_SESSION['uid'] = 'unittest';
-ConnectDB();
-$pj = MseProject::getExistProject('unittest', 'unittest');
-$_SESSION["unittest_unittest"] = $pj;
-
-?>
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <title>Interface Spec Runner</title>
+  <title>Project Spec Runner</title>
+
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="shortcut icon" type="image/png" href="lib/jasmine-1.2.0/jasmine_favicon.png">
 <link rel="stylesheet" type="text/css" href="lib/jasmine-1.2.0/jasmine.css">
@@ -39,41 +17,13 @@ $_SESSION["unittest_unittest"] = $pj;
 <script src="../javascript/tools.js"></script>
 <script src="../javascript/interface.js"></script>
 <script src="../javascript/command.js"></script>
+<script src="support/project_data.js"></script>
 
 <link rel="stylesheet" type="text/css" href="../stylesheets/menu.css" />
 <link rel="stylesheet" type="text/css" href="../stylesheets/interface.css" />
 
 <!-- include spec files here... -->
-<script src="spec/interface/spec_project_data.js"></script>
-<script src="spec/interface/spec_interface.js"></script>
-
-<script type="text/javascript">
-(function() {
-    var jasmineEnv = jasmine.getEnv();
-    jasmineEnv.updateInterval = 1000;
-
-    var htmlReporter = new jasmine.HtmlReporter();
-
-    jasmineEnv.addReporter(htmlReporter);
-
-    jasmineEnv.specFilter = function(spec) {
-        return htmlReporter.specFilter(spec);
-    };
-
-    var currentWindowOnload = window.onload;
-
-    window.onload = function() {
-        if (currentWindowOnload) {
-            currentWindowOnload();
-        }
-        execJasmine();
-    };
-
-    function execJasmine() {
-        jasmineEnv.execute();
-    }
-})();
-</script>
+<script src="spec/interface/spec_project.js"></script>
 
 <STYLE type="text/css">
     body {
@@ -250,24 +200,48 @@ $_SESSION["unittest_unittest"] = $pj;
 	$('#srcAdd').click(addFileDialog);
 	$('#saveProjet').click(saveProject);
 	
-	<?php
-	    print("var pjName = '".$pj->getName()."';\n");
-        print("var pjLanguage = '".$pj->getLanguage()."';\n");
-	    print("var imgPath = '".$pj->getSrcSavePath("image")."';\n");
-	    print("var audPath = '".$pj->getRelatSrcPath("audio")."';\n");
-	    print("var gamePath = '".$pj->getRelatSrcPath("game")."';\n");
-	    print("var lastModServer = ".$pj->getLastModTS().";\n");
-	    print("Config.init({width:".$pj->getWidth().", height:".$pj->getHeight()."});\n");
-
-        if(isset($_SESSION["uid"]) && $_SESSION["uid"] != "") {
-            echo "uid = '".$_SESSION["uid"]."';\n";
-        }
-    ?>
+	var pjName = 'unittest';
+	var pjLanguage = 'unittest';
+	var imgPath = './projects/Voodoo_Ch1/images/';
+	var audPath = './Voodoo_Ch1/audios/';
+	var gamePath = './Voodoo_Ch1/games/';
+	var uid = 'unittest';
+	$(".menu li.id").text(uid);
+	Config.init({width:800, height:600});
+	
     if(uid && uid != "") {
         $(".menu li.id").text(uid);
     }
 	
 	var config = Config.getInstance();
+	init();
+	
+	(function(){
+	var jasmineEnv = jasmine.getEnv();
+	jasmineEnv.updateInterval = 1000;
+	
+	var htmlReporter = new jasmine.HtmlReporter();
+	
+	jasmineEnv.addReporter(htmlReporter);
+	
+	jasmineEnv.specFilter = function(spec) {
+	    return htmlReporter.specFilter(spec);
+	};
+	
+	var currentWindowOnload = window.onload;
+	
+	window.onload = function() {
+	    if (currentWindowOnload) {
+	        currentWindowOnload();
+	    }
+	    execJasmine();
+	};
+	
+	function execJasmine() {
+	    jasmineEnv.execute();
+	}
+	})();
+
 </script>
 
 </body>
