--- a/test/multitouch.html
+++ b/test/multitouch.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
 <script id="DC_baseScript">if(navigator.userAgent.indexOf('AppleWebKit/') == -1) document.write('<base href="' + location.protocol + '//' + location.host + location.pathname.replace(/\/[^\/]*$/, '/mobile/') + '"/>')</script>
 
 <meta charset="utf-8"/>
