--- a/test/GenerateSpeaksRunnerWithInterface.html
+++ b/test/GenerateSpeaksRunnerWithInterface.html
@@ -3,6 +3,8 @@
 <html>
 <head>
   <title>Interface Spec Runner</title>
+  
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="shortcut icon" type="image/png" href="lib/jasmine-1.2.0/jasmine_favicon.png">
 <link rel="stylesheet" type="text/css" href="lib/jasmine-1.2.0/jasmine.css">
