--- a/test/ToolsRunner.html
+++ b/test/ToolsRunner.html
@@ -4,6 +4,8 @@
 <head>
   <title>Tools Spec Runner</title>
 
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
 <link rel="shortcut icon" type="image/png" href="lib/jasmine-1.2.0/jasmine_favicon.png">
 <link rel="stylesheet" type="text/css" href="lib/jasmine-1.2.0/jasmine.css">
 <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine.js"></script>
