Editable Tool Specs
In addition
- bug in interface specs

--- a/test/EditorToolRunner.html
+++ b/test/EditorToolRunner.html
@@ -22,6 +22,7 @@
 
 <!-- include spec files here... -->
 <script src="spec/interface/spec_creatTool.js"></script>
+<script src="spec/interface/spec_editableTool.js"></script>
 
 <STYLE type="text/css">
     body {
